[#730] Bump xml-sec 2.1.7 -> 3.0.4 (#732)
* [#730] Bump xml-sec 2.1.7 -> 2.2.6

Direct vulnerabilities:
CVE-2023-44483

Vulnerabilities from dependencies:
CVE-2023-36479
CVE-2023-33202
CVE-2023-33201
CVE-2023-26049
CVE-2023-26048
CVE-2022-40156
CVE-2022-40155
CVE-2022-40154
CVE-2022-40153
CVE-2022-40152
CVE-2022-34169
CVE-2022-23437
CVE-2021-34428
CVE-2021-28169
CVE-2021-28165
CVE-2020-27223
CVE-2020-27218
CVE-2020-14338

* <artifactId>xmlsec</artifactId><version>3.0.4</version>

* error: package javax.xml.bind.annotation does not exist